Add css from dashboard1.

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.view{
+  border:1px solid #eee;
+  min-height: 200px;
+  box-shadow:0 2px 2px #ccc;
+  padding: 22px;
+  margin:10px;
+}
+.row {
+  display: flex;
+}
+.column {
+  flex: 50%;
+}
