--- a/src/App.css
+++ b/src/App.css
@@ -37,11 +37,17 @@
   }
 }
 
+h1 {
+  font-size: 20px;
+  margin-top: 0;
+  margin-bottom: 7px;
+}
+
 .pane{
   border:1px solid #eee;
   min-height: 200px;
   box-shadow:0 2px 2px #ccc;
-  padding: 10px;
+  padding: 7px 10px;
   margin:10px;
 }
 .row {
