--- a/src/App.css
+++ b/src/App.css
@@ -38,9 +38,15 @@
 }
 
 h1 {
-  font-size: 20px;
+  font-size: 1.5em;
   margin-top: 0;
-  margin-bottom: 7px;
+  margin-bottom: 0.7em;
+}
+
+h2 {
+  font-size: 1.2em;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .pane{
