--- a/src/App.css
+++ b/src/App.css
@@ -40,13 +40,18 @@
 h1 {
   font-size: 1.5em;
   margin-top: 0;
-  margin-bottom: 0.7em;
+  margin-bottom: 0;
 }
 
 h2 {
   font-size: 1.2em;
   margin-top: 0;
   margin-bottom: 0;
+}
+
+.row-header {
+  border-bottom: 1px solid;
+  align-items: baseline;
 }
 
 .pane{
