--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,15 @@ h2 {
   display: flex;
   margin-top: 5px
 }
+
+.data-row {
+  display: flex;
+  margin: 10px 0 10px 0;
+  padding: 5px 0 5px 0;
+  background-color:beige;
+  align-items: baseline;
+}
+
 .column {
   flex: 50%;
 }
