--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@ h2 {
 .data-row {
   display: flex;
   margin: 10px 0 10px 0;
-  padding: 5px 0 5px 0;
+  padding: 5px;
   background-color:beige;
   align-items: baseline;
 }
