--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@ h2 {
 }
 
 .pane{
+  flex: 1;
   border:1px solid #eee;
   min-height: 200px;
   box-shadow:0 2px 2px #ccc;
@@ -75,6 +76,8 @@ h2 {
 
 .column {
   flex: 50%;
+  display: flex;
+  flex-direction: column;
 }
 
 .react-json-view {
