--- a/src/App.css
+++ b/src/App.css
@@ -68,9 +68,9 @@ h2 {
 
 .data-row {
   display: flex;
-  margin: 10px 0 10px 0;
-  padding: 5px;
-  background-color:beige;
+  margin: 0;
+  padding: 3px;
+  /* background-color:beige; */
   align-items: baseline;
 }
 
