--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: left;
+  margin-bottom: 5px;
 }
 
 .App-logo {
@@ -57,8 +58,8 @@ h2 {
   flex: 1;
   border:1px solid #eee;
   box-shadow:0 2px 2px #ccc;
-  padding: 7px 10px;
-  margin:10px;
+  padding: 5px 10px 10px 10px;
+  margin: 5px 10px;
 }
 
 .vspace {
