Show tee icon (always).

--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,11 @@ h2 {
 .overview-column {
   flex: 1;
   flex-grow: 0;
-  flex-basis: 40px;
+  flex-basis: 25px;
+}
+
+.overview-tree {
+  margin: 3px 0 0 0;
 }
 
 .overview-datacolumn {
