--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ h2 {
   box-shadow:0 2px 2px #ccc;
   padding: 5px 10px 10px 10px;
   margin: 5px 10px;
+  font-size: 0.8em;
 }
 
 .vspace {
@@ -93,9 +94,27 @@ h2 {
   flex-basis: 25px;
 }
 
+.overview-firstcol {
+  flex: 1;
+  flex-grow: 0;
+  padding: 3px;
+  border: #ccc 1px solid;
+}
+
+.overview-header {
+  flex: 1;
+  flex-grow: 1;
+  padding: 3px;
+  font-weight: bold;
+  border-top: #ccc 1px solid;
+  border-right: #ccc 1px solid;
+  border-bottom: #ccc 1px solid;
+}
+
 .overview-datacolumn {
   flex: 1;
   flex-grow: 1;
+  padding: 3px;
 }
 
 .column {
