--- a/src/App.css
+++ b/src/App.css
@@ -67,14 +67,22 @@ h2 {
   padding: 3px 0 3px 0;
 }
 
+.rspace {
+  margin-right: 3px;
+}
+
 .label {
-  margin: 3px;
+  margin: 3px 3px 3px 0;
   font-weight: bold;
 }
 
 .row {
   display: flex;
   margin-top: 5px
+}
+
+.funnel {
+  margin-left: 5px;
 }
 
 .data-row {
@@ -99,6 +107,12 @@ h2 {
   flex: 1;
   flex-grow: 0;
   padding: 3px;
+}
+
+.overview-firstcol-border {
+  flex: 1;
+  flex-grow: 0;
+  padding: 3px;
   border: #ccc 1px solid;
 }
 
@@ -106,10 +120,20 @@ h2 {
   flex: 1;
   flex-grow: 1;
   padding: 3px;
-  font-weight: bold;
   border-top: #ccc 1px solid;
   border-right: #ccc 1px solid;
   border-bottom: #ccc 1px solid;
+}
+
+.overview-header-inner {
+  flex: 1;
+  flex-grow: 1;
+}
+
+.overview-header-inner-bold {
+  flex: 1;
+  flex-grow: 1;
+  font-weight: bold;
 }
 
 .overview-datacolumn {
