--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,12 @@ h3 {
 
 .row {
   display: flex;
-  margin-top: 5px
+  margin-top: 5px;
+  align-items: baseline;
+}
+
+.right-justify {
+  justify-content: right;
 }
 
 .funnel {
@@ -100,6 +105,7 @@ h3 {
 
 .overview-row {
   display: flex;
+  margin-top: 3px;
 }
 
 .overview-column {
